Fix 1268 - Fix overlapping Help Section with footer (#1271)
* Updated Badgeyay's icon (#1203)

The badgeyay's icon on susper.com has been updated.

Fixes #1201

* "Commit "

--- a/src/app/help/help.component.css
+++ b/src/app/help/help.component.css
@@ -270,3 +270,7 @@ a:hover {
 	width: 90%;
 	height: 100%;
 }
+.help {
+	margin-bottom: 50px;
+}
+
